--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PASSWORD=
-DB_NAME=
+DB_HOST=dpg-d2mhgj3ipnbc73esid10-a.oregon-postgres.render.com
+DB_PORT=5432
+DB_USER=form_nutri_bd_user
+DB_PASSWORD=pM1IHLf9kt98vFiFQFfHPk3ohFK5RcC8
+DB_NAME=form_nutri_bd
+PORT=3000
